# ECE4122

./: .gitignore
FinalProject/: CMakeLists.txt  FinalProject  FinalProject.cpp
Lab0/: Lab0_Problem1  Lab0_Problem1.cpp  Lab0_Problem2  Lab0_Problem2.cpp
Lab1/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  OLD-TEMP-SAVE-CMakeLists.txt  cmake_install.cmake
Lab1/Chapter01/: Makefile  cmake_install.cmake
Lab1/Chapter05/: Makefile  cmake_install.cmake
Lab1/Chapter07/: Makefile  cmake_install.cmake
Lab1/SFML/: Makefile  SFMLSharedTargets.cmake  cmake_install.cmake
Lab1/SFML/src/SFML/: Makefile  cmake_install.cmake
Lab1/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
Lab1/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
Lab1/SFML/src/SFML/System/: Makefile  cmake_install.cmake
Lab1/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
Lab1/code/: ECE_Buzzy.cpp  ECE_Buzzy.h  ECE_BuzzyDefender.cpp  ECE_BuzzyDefender.h  ECE_Enemy.cpp  ECE_Enemy.h  ECE_LaserBlast.cpp  ECE_LaserBlast.h
Lab1/output/lib/: libsfml-system.so.2.6.2
Lab2/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  Lab2.pdf:Zone.Identifier  main.cpp
Lab3/: CMakeLists.txt
Lab3/common/: controls.cpp
Lab3/misc05_picking/: misc05_picking_BulletPhysics  misc05_picking_custom  misc05_picking_slow_easy
Lab3/original ogl files from github repo/ogl/misc05_picking/: misc05_picking_BulletPhysics
Lab3/original ogl files from github repo/ogl/playground/: playground
Lab3/original ogl files from github repo/ogl/tutorial02_red_triangle/: tutorial02_red_triangle
Lab3/original ogl files from github repo/ogl/tutorial03_matrices/: tutorial03_matrices
Lab3/original ogl files from github repo/ogl/tutorial08_basic_shading/: tutorial08_basic_shading
Lab3/original ogl files from github repo/ogl/tutorial10_transparency/: tutorial10_transparency
Lab3/original ogl files from github repo/ogl/tutorial11_2d_fonts/: tutorial11_2d_fonts
Lab3/original ogl files from github repo/ogl/tutorial12_extensions/: tutorial12_extensions
Lab3/original ogl files from github repo/ogl/tutorial13_normal_mapping/: tutorial13_normal_mapping
Lab3/original ogl files from github repo/ogl/tutorial18_billboards_and_particles/: tutorial18_billboards  tutorial18_particles
Lab3/playground/: playground  playground.cpp
Lab3/tutorial01_first_window/: tutorial01_first_window
Lab3/tutorial03_matrices/: tutorial03_matrices
Lab3/tutorial04_colored_cube/: tutorial04_colored_cube
Lab3/tutorial05_textured_cube/: tutorial05_textured_cube
Lab3/tutorial06_keyboard_and_mouse/: tutorial06_keyboard_and_mouse
Lab3/tutorial07_model_loading/: tutorial07_model_loading
Lab3/tutorial09_vbo_indexing/: tutorial09_AssImp.cpp  tutorial09_several_objects  tutorial09_vbo_indexing
Lab3/tutorial10_transparency/: tutorial10_transparency
Lab3/tutorial11_2d_fonts/: tutorial11_2d_fonts
Lab3/tutorial12_extensions/: tutorial12_extensions
Lab3/tutorial13_normal_mapping/: tutorial13_normal_mapping
Lab3/tutorial14_render_to_texture/: tutorial14_render_to_texture
Lab3/tutorial15_lightmaps/: tutorial15_lightmaps
Lab3/tutorial16_shadowmaps/: tutorial16_shadowmaps  tutorial16_shadowmaps_simple
Lab3/tutorial17_rotations/: tutorial17_rotations
Lab3/tutorial18_billboards_and_particles/: tutorial18_billboards  tutorial18_particles
Lab4/: CMakeLists.txt  lab4.cu  test_gpu.cu
Lab5/: Makefile.rar  client  client.cpp  server
Lab5/Submission/: server.cpp
Lab6/: MonteCarlo.cpp
